added CRUD of clients
